[project]
name = "cir-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain-chroma>=1.0.0",
    "pandas>=2.3.3",
    "docling>=2.57.0",
    "langchain>=1.0.1",
    "langchain-ollama>=1.0.0",
]
